add stars to the page

--- a/index.html
+++ b/index.html
@@ -273,12 +273,40 @@
           <div class="card2">
             <div class="rating">
               <div class="star">
-                <img src="./resources/icons/star.png" alt="" />
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
               </div>
-              <div class="star"></div>
-              <div class="star"></div>
-              <div class="star"></div>
-              <div class="star"></div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star2.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
             </div>
             <div class="opinion">
               <p>"The most efficient way to get fresh produce"</p>
@@ -290,7 +318,43 @@
           </div>
 
           <div class="card2">
-            <div class="rating"></div>
+            <div class="rating">
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star2.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+            </div>
             <div class="opinion">
               <p>"The most efficient way to get fresh produce"</p>
             </div>
@@ -303,7 +367,43 @@
           </div>
 
           <div class="card2">
-            <div class="rating"></div>
+            <div class="rating">
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star0.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+              <div class="star">
+                <img
+                  src="./resources/icons/star2.png"
+                  alt="star"
+                  class="star1"
+                />
+              </div>
+            </div>
             <div class="opinion">
               <p>"The most efficient way to get fresh produce"</p>
             </div>
