add images for main section 6

--- a/index.html
+++ b/index.html
@@ -312,7 +312,13 @@
               <p>"The most efficient way to get fresh produce"</p>
             </div>
             <div class="card2_info">
-              <div class="c2info_img"></div>
+              <div class="c2info_img">
+                <img
+                  src="./resources/Assets/rectangle_11.png"
+                  alt="person 1"
+                  class="person"
+                />
+              </div>
               <div class="c2info_name">Rebecca Mkulima</div>
             </div>
           </div>
@@ -359,7 +365,13 @@
               <p>"The most efficient way to get fresh produce"</p>
             </div>
             <div class="card2_info">
-              <div class="c2info_img"></div>
+              <div class="c2info_img">
+                <img
+                  src="./resources/Assets/rectangle_11_1.png"
+                  alt="person 2"
+                  class="person"
+                />
+              </div>
               <div class="c2info_name">
                 <p>John Joe</p>
               </div>
@@ -408,7 +420,13 @@
               <p>"The most efficient way to get fresh produce"</p>
             </div>
             <div class="card2_info">
-              <div class="c2info_img"></div>
+              <div class="c2info_img">
+                <img
+                  src="./resources/Assets/rectangle_11_2.png"
+                  alt="person 3"
+                  class="person"
+                />
+              </div>
               <div class="c2info_name">
                 <p>Lavingtone Dwellers</p>
               </div>
