create the read more and see more buttons

--- a/index.html
+++ b/index.html
@@ -260,11 +260,19 @@
             </div>
           </div>
         </div>
-        <div id="sect5_info">See All</div>
+
+        <div id="sect6_info1">
+          <div id="sc6_info_par">
+            <p><strong>See</strong> All</p>
+          </div>
+          <div id="sc6_info_arrow">
+            <img src="./resources/icons/arrow.svg" alt="arrow" id="arrow" />
+          </div>
+        </div>
       </div>
-    </main>
-    <!--================Main section 6 (esteemed customers)===============-->
-    <section>
+
+      <!--================Main section 6 (esteemed customers)===============-->
+
       <div id="section6">
         <div id="sect6_head">
           <h3>What our esteemed customers have to say about us</h3>
@@ -433,9 +441,17 @@
             </div>
           </div>
         </div>
-        <div id="sect6_info">Read More</div>
       </div>
-    </section>
+
+      <div id="sect6_info">
+        <div id="sc6_info_par">
+          <p><strong>Read </strong> More</p>
+        </div>
+        <div id="sc6_info_arrow">
+          <img src="./resources/icons/arrow.svg" alt="arrow" id="arrow" />
+        </div>
+      </div>
+    </main>
     <!--===============Footer================-->
     <footer>
       <div id="footer1">
