add final styling to main section 6

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 />
               </div>
               <div class="c2info_name">
-                <p>Lavingtone Dwellers</p>
+                <p>Lavingtone</p>
               </div>
             </div>
           </div>
