add missing div

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
       </div>
     </header>
+
     <!--===============Main section 1(intro)================-->
     <main>
       <div id="section1">
@@ -56,6 +57,21 @@
           </div>
         </div>
         <div id="sect1_img"></div>
+      </div>
+
+      <div id="stats">
+        <div class="stat1">
+          <h5 class="stat1_head">200+</h5>
+          <p class="stat1_par">Verified Vendors</p>
+        </div>
+        <div class="stat1">
+          <h5 class="stat1_head">105+</h5>
+          <p class="stat1_par">Happy Customers</p>
+        </div>
+        <div class="stat1">
+          <h5 class="stat1_head">2000+</h5>
+          <p class="stat1_par">Nation Wide Customers</p>
+        </div>
       </div>
 
       <!--===============Main Section 2(existence)================-->
