add final formatting to all main section and header except footer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </header>
 
     <!--===============Main section 1(intro)================-->
+<section>
     <main>
       <div id="section1">
         <div id="sect1_cont">
@@ -73,7 +74,7 @@
           <p class="stat1_par">Nation Wide Customers</p>
         </div>
       </div>
-
+    </section>
       <!--===============Main Section 2(existence)================-->
 
       <div id="section2">
