--- a/index.html
+++ b/index.html
@@ -34,47 +34,48 @@
     </header>
 
     <!--===============Main section 1(intro)================-->
-<section>
-    <main>
-      <div id="section1">
-        <div id="sect1_cont">
-          <div id="sect1_header">
-            <h1>
-              Buying and selling quality
-              <br />
-              farm produce has never
-              <br />
-              been easier.
-            </h1>
-          </div>
-          <div id="sect1_par1">
-            <p>
-              Agriplus is here to have you sorted, you can order farm produce
-              from the farmers harvesters and producers directly.
-            </p>
-          </div>
-          <div id="sect1_info">
-            <button>Explore More</button>
-          </div>
-        </div>
-        <div id="sect1_img"></div>
-      </div>
 
-      <div id="stats">
-        <div class="stat1">
-          <h5 class="stat1_head">200+</h5>
-          <p class="stat1_par">Verified Vendors</p>
+    <main>
+      <section>
+        <div id="section1">
+          <div id="sect1_cont">
+            <div id="sect1_header">
+              <h1>
+                Buying and selling quality
+                <br />
+                farm produce has never
+                <br />
+                been easier.
+              </h1>
+            </div>
+            <div id="sect1_par1">
+              <p>
+                Agriplus is here to have you sorted, you can order farm produce
+                from the farmers harvesters and producers directly.
+              </p>
+            </div>
+            <div id="sect1_info">
+              <button>Explore More</button>
+            </div>
+          </div>
+          <div id="sect1_img"></div>
         </div>
-        <div class="stat1">
-          <h5 class="stat1_head">105+</h5>
-          <p class="stat1_par">Happy Customers</p>
+
+        <div id="stats">
+          <div class="stat1">
+            <h5 class="stat1_head">200+</h5>
+            <p class="stat1_par">Verified Vendors</p>
+          </div>
+          <div class="stat1">
+            <h5 class="stat1_head">105+</h5>
+            <p class="stat1_par">Happy Customers</p>
+          </div>
+          <div class="stat1">
+            <h5 class="stat1_head">2000+</h5>
+            <p class="stat1_par">Nation Wide Customers</p>
+          </div>
         </div>
-        <div class="stat1">
-          <h5 class="stat1_head">2000+</h5>
-          <p class="stat1_par">Nation Wide Customers</p>
-        </div>
-      </div>
-    </section>
+      </section>
       <!--===============Main Section 2(existence)================-->
 
       <div id="section2">
@@ -471,79 +472,13 @@
     <!--===============Footer================-->
     <footer>
       <div id="footer1">
-        <div id="f1_cont1">
-          <div id="f1_cont1_1">
-            <h2>We'd like to keep in touch</h2>
-            <p>Subscribe to our Newsletter</p>
-          </div>
-          <div id="f1_cont1_2">
-            <div id="cont1_1">Enter your Email address</div>
-            <div id="cont1_2"><button>Subscribe</button></div>
-          </div>
+        <div id="ft1_par1">
+          <h3>We'd like to keep in touch</h3>
+          <p>Subscribe to our newsletter</p>
         </div>
-      </div>
-      <div id="footer2">
-        <div id="f2_container">
-          <div id="f2_cont1">
-            <h3>AgriPlus</h3>
-            <p>
-              Quality farm products produced through <br />
-              buying and selling
-            </p>
-            <div id="ft_icons">
-              <div class="icons">
-                <img src="./resources/icons/twitter.svg" alt="Twitter logo" />
-              </div>
-              <div class="icons">
-                <img src="./resources/icons/facebook.svg" alt="Facebook logo" />
-              </div>
-              <div class="icons">
-                <img
-                  src="./resources/icons/instagram.svg"
-                  alt="Instagram logo"
-                />
-              </div>
-            </div>
-            <h4>Get the app</h4>
-            <div id="app">
-              <div class="app">
-                <img
-                  src="./resources/icons/play_store.png"
-                  alt="Playstore badge"
-                  class="badge"
-                />
-              </div>
-              <div class="app">
-                <img
-                  src="./resources/icons/applystore.png"
-                  alt="App store badge"
-                  class="badge"
-                />
-              </div>
-            </div>
-          </div>
-          <div class="f2_conts" id="f2_cont2">
-            <h4>Company</h4>
-            <p>About</p>
-            <p>Product</p>
-            <p>Contact Us</p>
-          </div>
-          <div class="f2_conts" id="f2_cont3">
-            <h4>Products</h4>
-            <p>Dairy</p>
-            <p>Cereals</p>
-            <p>Vegetables and Fruits</p>
-            <p>More ...</p>
-          </div>
-          <div class="f2_conts" id="f2_cont4">
-            <h4>Others</h4>
-            <p>FAQs</p>
-            <p>Terms of Servics</p>
-            <p>Privacy Policy</p>
-          </div>
-        </div>
-        <div id="par1">
-          <p>All rights reserved terms and conditions apply.</p>
+        <div id="ft1_par2">
+          <div id="ft1p2_1">Enter your email address</div>
+          <div id="ft1p2_2"><button>Subscribe</button></div>
         </div>
       </div>
     </footer>
