add final styling

--- a/index.html
+++ b/index.html
@@ -481,6 +481,78 @@
           <div id="ft1p2_2"><button>Subscribe</button></div>
         </div>
       </div>
+
+      <div id="footer2">
+        <div id="f2_cont">
+          <div id="f2_main">
+            <h3>AgriPlus</h3>
+            <p>
+              Quality farm produce through <br />
+              buying and selling
+            </p>
+            <div id="f2_main_cont">
+              <div>
+                <img
+                  src="./resources/icons/facebook.svg"
+                  alt="facebook"
+                  class="f_img"
+                />
+              </div>
+              <div>
+                <img
+                  src="./resources/icons/twitter.svg"
+                  alt="twitter"
+                  class="f_img"
+                />
+              </div>
+              <div>
+                <img
+                  src="./resources/icons/instagram.svg"
+                  alt="instagram"
+                  class="f_img"
+                />
+              </div>
+            </div>
+            <h4>Get the app</h4>
+            <div id="app_cont">
+              <div id="badge_cont">
+                <img
+                  src="./resources/icons/play_store.png"
+                  alt="playstore"
+                  class="badge"
+                />
+              </div>
+              <div id="badge_cont">
+                <img
+                  src="./resources/icons/applystore.png"
+                  alt="playstore"
+                  class="badge"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="f2_divs">
+            <h5>Company</h5>
+            <p>About</p>
+            <p>Products</p>
+            <p>Contact Us</p>
+          </div>
+          <div class="f2_divs">
+            <h5>Products</h5>
+            <p>Dairy</p>
+            <p>Cereals</p>
+            <p>Vegetables & fruits</p>
+            <p>More...</p>
+          </div>
+          <div class="f2_divs">
+            <h5>Others</h5>
+            <p>FAQs</p>
+            <p>Terms and Conditions</p>
+            <p>Privacy policy</p>
+          </div>
+        </div>
+        <div id="f2_par1">All rights reserved terms and conditions apply</div>
+      </div>
     </footer>
   </body>
 </html>
