add links in the navigation bar

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         <div id="logo">
           <h1>AgriPlus</h1>
         </div>
+
         <div id="head_info">
-          <div class="h_info">Home</div>
-          <div class="h_info">About</div>
-          <div class="h_info">Products</div>
-          <div class="h_info">Contact Us</div>
+          <div class="h_info"><a href="#section1">Home</a></div>
+          <div class="h_info"><a href="#footer2">About</a></div>
+          <div class="h_info"><a href="#section3">Products</a></div>
+          <div class="h_info"><a href="#footer2">Contact Us</a></div>
         </div>
+
         <div id="head_cred">
           <div id="head_b1" class="head_bt"><button>Login</button></div>
           <div id="head_b2" class="head_bt"><button>Get Started</button></div>
