add bar and miscelleneous styling

--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
         <div id="logo">
           <h1>AgriPlus</h1>
         </div>
-
         <div id="head_info">
           <div class="h_info"><a href="#section1">Home</a></div>
           <div class="h_info"><a href="#footer2">About</a></div>
           <div class="h_info"><a href="#section3">Products</a></div>
           <div class="h_info"><a href="#footer2">Contact Us</a></div>
         </div>
-
         <div id="head_cred">
           <div id="head_b1" class="head_bt"><button>Login</button></div>
           <div id="head_b2" class="head_bt"><button>Get Started</button></div>
@@ -290,6 +288,8 @@
           <img src="./resources/icons/arrow.svg" alt="arrow" id="arrow" />
         </div>
       </div>
+
+      <div id="bar"></div>
       <!--================Main section 6 (esteemed customers)===============-->
 
       <div id="section6">
