--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
               <button>Explore More</button>
             </div>
           </div>
-          <div id="sect1_img"></div>
+          <div id="sect1_img">
+            <img
+              src="./resources/Assets/image_2.png"
+              alt="image2"
+              id="sect1_img2"
+            />
+          </div>
         </div>
 
         <div id="stats">
@@ -92,7 +98,13 @@
             </p>
           </div>
         </div>
-        <div id="sect2_div2"></div>
+        <div id="sect2_div2">
+          <img
+            src="./resources/Assets/image_3.png"
+            alt="discussion"
+            id="sect2_img"
+          />
+        </div>
       </div>
 
       <!--===============Main section 3(Products and categories)==============-->
