restructure the bakground images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--===============Main section 1(intro)================-->
 
     <main>
-      <section>
+      <section id="secct1">
         <div id="section1">
           <div id="sect1_cont">
             <div id="sect1_header">
